Support lazy loading as part of CheckSettings (#738)
* eyes-api: add test watcher script

* eyes-api: add lazyLoad to CheckSettings

* eyes-api: update changelog

* eyes-api: fix copy/paste error when wiring up waitingTime and pageHeight in CheckSettings.lazyLoad

* Update packages/eyes-api/src/input/CheckSettings.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* eyes-api: move LazyLoadOptions into its own file

* types: add lazyLoad and LazyLoadOptions

* snippets: first pass on the lazy load script. Still WIP since the test is failing due to a difference between the page height and the amount that the script was able to scroll

* snippets: use the traditional window.scrollTo function signature to support IE

* snippets: update changelog

* snippets: fix lazyLoad & test to determine correct max scroll height

* snippets: enable ie execution in lazyLoad test and add error handling to see where JS execution falls down

* snippets: switch implementation to sync/polling. Confirmed that it works on chrome, internet explorer, and ios safari

* snippets: small refactoring and added additional logging for peace of mind

* eyes-api: add lazyLoad to non-fluent CheckSettings

* snipppets: update lazyLoad to respect the existing scroll position of the browser instead of assuming 0, 0

* snippets: change lazyLoad options from an object to array elements to follow precedent

* snippets: wired up poll from dom-shared in lazyLoad/lazyLoadPollResult

* snippets: revert change to lazyLoad args, so an options object is passed since it is less for the caller to know about the snippet (e.g., options order should not be important) and added error handling in the event all options are not provided, to prevent a potential unending loop on polling

* core: first pass on wiring up lazyLoad for visual grid execution. Repurposed waitBeforeCapture, renaming it to prepareBeforeCapture (hat tip to @SophieDePaula for the reco

--- a/packages/eyes-api/package.json
+++ b/packages/eyes-api/package.json
@@ -45,6 +45,7 @@
     "build": "tsc",
     "test": "yarn test:unit",
     "test:unit": "mocha --no-timeouts -r ts-node/register './test/unit/*.spec.ts'",
+    "test:watch": "yarn test:unit --watch --extension ts",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
