--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -11,16 +11,18 @@ Apollo SDK:
 "@applitools/eyes-universal":
   feature:
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - 
 "@applitools/eyes-selenium":
   feature:
-    - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
 "@applitools/eyes-webdriverio":
   feature:
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - |
       Fix calling `waitBeforeCapture` when failed to set required viewport size
@@ -31,6 +33,7 @@ Apollo SDK:
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fixed broken links to enums implementation in the README.md
     - |
@@ -44,6 +47,7 @@ Apollo SDK:
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
@@ -59,6 +63,7 @@ Apollo SDK:
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fixed broken links to enums implementation in the README.md
     - |
@@ -69,7 +74,7 @@ Apollo SDK:
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
 "@applitools/eyes-testcafe":
   feature:
-    - 
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - |
       Fix calling `waitBeforeCapture` when failed to set required viewport size
@@ -80,6 +85,7 @@ Apollo SDK:
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
@@ -93,6 +99,7 @@ Apollo SDK:
 "@applitools/eyes-cypress":
   feature:
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
@@ -106,10 +113,11 @@ Apollo SDK:
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
-    - Dorp support for Node.js versions <=12
+    - Drop support for Node.js versions <=12
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add special attribute for pseudo elements
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
@@ -133,6 +141,7 @@ eyes-browser-extension:
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
+    - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
