[auto commit] @applitools/snippets: upgrade deps

--- a/packages/snippets/package.json
+++ b/packages/snippets/package.json
@@ -7,7 +7,9 @@
     "directory": "packages/snippets"
   },
   "license": "SEE LICENSE IN LICENSE",
-  "aliases": ["snippets"],
+  "aliases": [
+    "snippets"
+  ],
   "main": "./dist/index.js",
   "files": [
     "dist"
