[driver, screenshoter] fix native screenshots of the elements under large collapsing areas

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,12 +12,13 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed native screenshots of the elements under large collapsing areas
 "@applitools/eyes-selenium":
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
   bug-fix:
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Fixed native screenshots of the elements under large collapsing areas
 "@applitools/eyes-webdriverio":
   feature:
     - Add special attribute for pseudo elements
@@ -27,6 +28,7 @@ Apollo SDK:
       Fix calling `waitBeforeCapture` when failed to set required viewport size
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Fixed native screenshots of the elements under large collapsing areas
 "@applitools/eyes-playwright":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -57,6 +59,7 @@ Apollo SDK:
       Fix calling `waitBeforeCapture` when failed to set required viewport size
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Fixed native screenshots of the elements under large collapsing areas
 "@applitools/eyes-puppeteer":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -71,6 +74,7 @@ Apollo SDK:
       Fix calling `waitBeforeCapture` when failed to set required viewport size
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Fixed native screenshots of the elements under large collapsing areas
 "@applitools/eyes-testcafe":
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
@@ -95,6 +99,7 @@ Apollo SDK:
       Fix calling `waitBeforeCapture` when failed to set required viewport size
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Fixed native screenshots of the elements under large collapsing areas
 "@applitools/eyes-cypress":
   feature:
     - Add special attribute for pseudo elements
@@ -136,6 +141,7 @@ Apollo SDK:
       Fix calling `waitBeforeCapture` when failed to set required viewport size
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Fixed native screenshots of the elements under large collapsing areas
 eyes-browser-extension:
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
