--- a/.github/workflows/publish-new.yml
+++ b/.github/workflows/publish-new.yml
@@ -39,6 +39,8 @@ jobs:
     steps:
       - name: Check-out repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Setup
         uses: ./.github/actions/parser
         id: setup
