--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/screenshoter",
-  "version": "3.4.1",
+  "version": "3.4.2",
   "description": "Applitools universal screenshoter for web and native applications",
   "keywords": [
     "applitools",
@@ -25,7 +25,9 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
-  "aliases": ["screenshoter"],
+  "aliases": [
+    "screenshoter"
+  ],
   "exports": {
     ".": {
       "default": "./index.js"
@@ -68,18 +70,18 @@
     }
   },
   "dependencies": {
-    "@applitools/logger": "1.1.10",
-    "@applitools/snippets": "2.2.3",
-    "@applitools/utils": "1.3.6",
+    "@applitools/logger": "1.1.11",
+    "@applitools/snippets": "2.4.1",
+    "@applitools/utils": "1.3.7",
     "jpeg-js": "0.4.3",
     "png-async": "0.9.4"
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.5",
-    "@applitools/driver": "^1.9.2",
+    "@applitools/driver": "^1.9.3",
     "@applitools/scripts": "1.1.0",
-    "@applitools/spec-driver-webdriverio": "1.2.10",
-    "@applitools/test-utils": "1.3.2",
+    "@applitools/spec-driver-webdriverio": "1.2.11",
+    "@applitools/test-utils": "1.3.3",
     "appium": "^1.22.3",
     "chromedriver": "^101.0.0",
     "eslint": "^8.16.0",
