[storybook] add timeout for page.evaluate (#970)
* add timeout for page.evaluate

* requier ptimeoutWithError

* update pending changes

* add try catch to page evaluate

* user handleRenderStoryError

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -121,6 +121,7 @@ Apollo SDK:
   bug-fix:
     - Fixed broken links to enums implementation in the README.md
     - Fix rendering issues with Salesforce Lightning design system
+    - Add timeout when attempting to get data for a story
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
