--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -50,9 +50,12 @@
     "build:bin": "pkg .",
     "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-alpine ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
     "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-alpine ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
+    "setup": "yarn docker:setup",
+    "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
+    "docker:teardown": "docker-compose down",
     "test": "yarn test:it && yarn test:e2e",
     "test:unit": "mocha ./test/unit/*.spec.ts --exit --no-timeouts -r ts-node/register",
-    "test:it": "echo 'mocha ./test/it/*.spec.js --no-timeouts'",
+    "test:it": "mocha ./test/it/*.spec.ts --no-timeouts -r ts-node/register",
     "test:e2e": "mocha ./test/e2e/*.spec.ts --exit --no-timeouts -r ts-node/register",
     "deps": "bongo deps",
     "gh:publish": "gh workflow run publish-universal.yml --ref $(git rev-parse --abbrev-ref HEAD)",
@@ -71,6 +74,8 @@
     "@applitools/logger": "1.1.10",
     "@applitools/utils": "1.3.6",
     "@applitools/visual-grid-client": "15.12.43",
+    "proxy-agent": "^5.0.0",
+    "tunnel": "^0.0.6",
     "webdriver": "7.16.11",
     "ws": "7.4.6",
     "yargs": "17.4.1"
@@ -80,6 +85,7 @@
     "@applitools/sdk-coverage-tests": "^2.3.18",
     "@applitools/test-utils": "^1.3.2",
     "@applitools/types": "1.5.1",
+    "@types/http-proxy": "^1.17.9",
     "@types/mocha": "^9.0.0",
     "@types/node": "12",
     "@types/ws": "^7.4.4",
@@ -91,6 +97,7 @@
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "http-proxy": "^1.18.1",
     "husky": "^7.0.4",
     "mocha": "^9.0.0",
     "pkg": "^5.6.0",
