--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -11,6 +11,7 @@ Apollo SDK:
 "@applitools/eyes-universal":
   feature:
     - Support padding for regions in the following region types - ignoreRegions, layoutRegions, strictRegions, contentRegions
+    - Add proxy and tunneling support for connecting to the driver instance
   bug-fix:
     - Fixed native screenshots of the elements under large collapsing areas
     - Fixed scrolling on some android devices
