--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -74,8 +74,8 @@
     "@applitools/logger": "1.1.10",
     "@applitools/utils": "1.3.6",
     "@applitools/visual-grid-client": "15.12.43",
-    "proxy-agent": "^5.0.0",
-    "tunnel": "^0.0.6",
+    "proxy-agent": "5.0.0",
+    "tunnel": "0.0.6",
     "webdriver": "7.16.11",
     "ws": "7.4.6",
     "yargs": "17.4.1"
