--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -85,6 +85,7 @@ Apollo SDK:
       Fix calling `waitBeforeCapture` when failed to set required viewport size
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
+    - Allow configuration file to be loaded from ancestor directories
 "@applitools/eyes-nightwatch":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -109,12 +110,13 @@ Apollo SDK:
     - Add special attribute for pseudo elements
     - Add the ability for the SDK to lazy load the page prior to performing a check window
     - Support padding for regions in the following region types - ignoreRegions, layoutRegions, strictRegions, contentRegions
+    - Allow configuration file to be loaded from ancestor directories
   bug-fix:
     - Fix rendering issues with Salesforce Lightning design system
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
 "@applitools/eyes-storybook":
   feature:
-    - 
+    - Allow configuration file to be loaded from ancestor directories
   bug-fix:
     - 
 "@applitools/eyes-webdriverio5-service":
