user API addMobileDevice (#977)
Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -17,13 +17,14 @@ Apollo SDK:
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
     - Support padding for regions in the following region types - ignoreRegions, layoutRegions, strictRegions, contentRegions
+    - Support `addMobileDevice` in user API for NMG
   bug-fix:
     - Fix issue that prevented self-signed certificates from working when connecting through a proxy server
     - Fixed native screenshots of the elements under large collapsing areas
     - Fixed scrolling on some android devices
 "@applitools/eyes-webdriverio":
   feature:
-    - 
+    - Support `addMobileDevice` in user API for NMG 
   bug-fix:
     - 
 "@applitools/eyes-playwright":
@@ -33,6 +34,7 @@ Apollo SDK:
     - Add special attribute for pseudo elements
     - Add the ability for the SDK to lazy load the page prior to performing a check window
     - Support padding for regions in the following region types - ignoreRegions, layoutRegions, strictRegions, contentRegions
+    - Support `addMobileDevice` in user API for NMG
   bug-fix:
     - Fixed broken links to enums implementation in the README.md
     - |
@@ -48,6 +50,7 @@ Apollo SDK:
     - Add special attribute for pseudo elements
     - Add the ability for the SDK to lazy load the page prior to performing a check window
     - Support padding for regions in the following region types - ignoreRegions, layoutRegions, strictRegions, contentRegions
+    - Support `addMobileDevice` in user API for NMG
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
@@ -93,6 +96,7 @@ Apollo SDK:
     - Add special attribute for pseudo elements
     - Add the ability for the SDK to lazy load the page prior to performing a check window
     - Support padding for regions in the following region types - ignoreRegions, layoutRegions, strictRegions, contentRegions
+    - Support `addMobileDevice` in user API for NMG
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
@@ -123,6 +127,7 @@ Apollo SDK:
     - Allowed `` values in custom properties
     - Add special attribute for pseudo elements
     - Add the ability for the SDK to lazy load the page prior to performing a check window
+    - Support `addMobileDevice` in user API for NMG
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
