--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -81,6 +81,7 @@
   "devDependencies": {
     "@applitools/bongo": "^2.1.5",
     "@applitools/sdk-coverage-tests": "^2.3.18",
+    "@applitools/test-server": "^1.1.1",
     "@applitools/test-utils": "^1.3.3",
     "@applitools/types": "1.5.3",
     "@types/http-proxy": "^1.17.9",
@@ -95,7 +96,6 @@
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "http-proxy": "^1.18.1",
     "husky": "^7.0.4",
     "mocha": "^9.0.0",
     "pkg": "^5.6.0",
