--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -13,6 +13,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Improved handling of touch padding related issues in native apps
+    - Prevented navbar from appearing on Android 12 screenshots
 "@applitools/eyes-selenium":
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
@@ -23,11 +24,13 @@ Apollo SDK:
     - Fixed native screenshots of the elements under large collapsing areas
     - Fixed scrolling on some android devices
     - Improved handling of touch padding related issues in native apps
+    - Prevented navbar from appearing on Android 12 screenshots
 "@applitools/eyes-webdriverio":
   feature:
     - Support `addMobileDevice` in user API for NMG
   bug-fix:
     - Improved handling of touch padding related issues in native apps
+    - Prevented navbar from appearing on Android 12 screenshots
 "@applitools/eyes-playwright":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -65,6 +68,7 @@ Apollo SDK:
     - Fixed native screenshots of the elements under large collapsing areas
     - Fixed scrolling on some android devices
     - Improved handling of touch padding related issues in native apps
+    - Prevented navbar from appearing on Android 12 screenshots
 "@applitools/eyes-puppeteer":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
@@ -112,6 +116,7 @@ Apollo SDK:
     - Fixed native screenshots of the elements under large collapsing areas
     - Fixed scrolling on some android devices
     - Improved handling of touch padding related issues in native apps
+    - Prevented navbar from appearing on Android 12 screenshots
 "@applitools/eyes-cypress":
   feature:
     - 
@@ -153,6 +158,7 @@ Apollo SDK:
     - Fixed native screenshots of the elements under large collapsing areas
     - Fixed scrolling on some android devices
     - Improved handling of touch padding related issues in native apps
+    - Prevented navbar from appearing on Android 12 screenshots
 eyes-browser-extension:
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
