--- a/.github/workflows/py-tests.yaml
+++ b/.github/workflows/py-tests.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: Test python packages
 on:
   push:
   workflow_call:
@@ -7,6 +7,10 @@ on:
         description: branch to test
         required: false
         type: string
+
+defaults:
+  run:
+    working-directory: python
 
 jobs:
   dist-build:
@@ -23,7 +27,11 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: packages
-          path: "*/dist/"
+          if-no-files-found: error
+          # the [n] wildcard in pytho[n] is not to match anything, but to prevent
+          # upload-artifact from flattening python directory, e.g. uploading
+          # it's contents without python directory itself.
+          path: "pytho[n]/*/dist/"
 
   unit-tests:
     needs: dist-build
