python: run test suites on pull requests and manually

--- a/.github/workflows/py-tests.yaml
+++ b/.github/workflows/py-tests.yaml
@@ -1,6 +1,7 @@
-name: Test python packages
+name: Build and test python packages
 on:
-  push:
+  pull_request:
+  workflow_dispatch:
   workflow_call:
     inputs:
       ref:
