Add regionId to coded regions (#972)
* core: initial pass on regionId for classic execution. The e2e test is skipped since the feature has not been released to the public cloud yet

* core, vgc: add support for regionId in vg execution

* core: add todo comment to test

* core: refactor

* core, vgc: fix lint

* core: added TODO comment to test

* core: update getRegionIdFromElement to use element.selector

* vgc: preserve floating region properties when calculating selectors to find regions for

* core: fix coded region tests and skip region padding tests (for now)

* sd-se: add function to transform frameworks specific selector to common selector

* types, driver, core: wire up new spec function

* core: split assertions for coded regions with padding into classic/vg for easier debugging

* pc: add entries for dynamic coded regions support

* scripts: add readme with blurb about linking

* core: add scripts as dev dep (like the other packages)

* vgc: add scripts package as dev dep

* Update packages/spec-driver-selenium/src/spec-driver.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* Update packages/types/src/driver.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* Update packages/spec-driver-selenium/src/spec-driver.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* core: for regionId, only use a selector from an element

* sdse: update tests based on feedback from Kyrylo

* core: streamline stringifySelector

* spse: fix lint

* improve untransformSelector logic

* fix lint

* simplify and test calculateSelectorsToFindRegionsFor

* fix coded region e2e test and bug in classic

* whitespace

* support selenium locators (and test them all)

* consider sorting order for indexing regions

* update expected output according for adding locator strategy prefix

* core: abstract stringifySelector into its ow

--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -92,11 +92,12 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.5",
+    "@applitools/scripts": "^1.1.0",
     "@applitools/sdk-fake-eyes-server": "2.1.2",
     "@applitools/spec-driver-selenium": "1.3.11",
     "@applitools/test-server": "^1.1.3",
     "@applitools/test-utils": "1.3.3",
-    "@applitools/visual-grid-client": "15.12.46",
+    "@applitools/visual-grid-client": "15.12.47",
     "chai": "4.2.0",
     "chai-uuid": "1.0.6",
     "eslint": "^8.16.0",
