--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -31,7 +31,9 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
-  "aliases": ["protractor"],
+  "aliases": [
+    "protractor"
+  ],
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
   "files": [
@@ -62,11 +64,11 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.5.1",
-    "@applitools/eyes-sdk-core": "13.6.28",
-    "@applitools/types": "1.4.4",
-    "@applitools/utils": "1.3.3",
-    "@applitools/visual-grid-client": "15.12.37"
+    "@applitools/eyes-api": "1.7.1",
+    "@applitools/eyes-sdk-core": "13.8.4",
+    "@applitools/types": "1.5.4",
+    "@applitools/utils": "1.3.9",
+    "@applitools/visual-grid-client": "15.12.47"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.8",
@@ -74,7 +76,7 @@
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "2.3.18",
     "@applitools/sdk-shared": "0.9.11",
-    "@applitools/test-utils": "1.3.2",
+    "@applitools/test-utils": "1.3.3",
     "@types/mocha": "^9.1.1",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
