--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@applitools/bongo": "^2.1.5",
     "@applitools/dom-snapshot": "4.6.0",
+    "@applitools/scripts": "^1.1.0",
     "@applitools/test-server": "1.1.3",
     "@applitools/test-utils": "1.3.3",
     "@applitools/utils": "^1.3.9",
