Improve the logic to detect navBar location in native android (#965)
* improve the logic to detect navBar location in native android

* update pending-changes

* abstruct the logic of navBar side to driver class

* refactor system bars detection

* [driver] improve orientation detection algorithm for android

* remove useless withNavBar api

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>
Co-authored-by: kyrylo <kyrylo.onufriiev@applitools.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -14,6 +14,7 @@ Apollo SDK:
   bug-fix:
     - Improved handling of touch padding related issues in native apps
     - Prevented navbar from appearing on Android 12 screenshots
+    - Improve the logic that detects the side of native Android navigation bar
 "@applitools/eyes-selenium":
   feature:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
@@ -26,11 +27,12 @@ Apollo SDK:
     - Fixed scrolling on some android devices
     - Improved handling of touch padding related issues in native apps
     - Prevented navbar from appearing on Android 12 screenshots
+    - Improve the logic that detects the side of native Android navigation bar
 "@applitools/eyes-webdriverio":
   feature:
     - Add support for dynamic coded regions
   bug-fix:
-    - 
+    - Improve the logic that detects the side of native Android navigation bar
 "@applitools/eyes-playwright":
   feature:
     - Added support for taking full screenshots of elements that are scroll by pages only
